--- a/src/app/node/node.component.html
+++ b/src/app/node/node.component.html
@@ -1,10 +1,15 @@
-<div class="create-node">
-    <div>
+<html>
+
+<body>
+    <div class="container">
+        <div class="create-node">
+            <!-- <div>
         <br>
         <button class="btn" (click)="onClickOpenForm()" value="Register">Add Node</button>
     </div>
+    <br> -->
 
-    <div>
+            <!-- <div>
         <br>
         <button class="btn" [hidden]="!openform" (click)="onClickOpenConceptForm()" value="Concept">Create Concept Node
         </button>
@@ -14,68 +19,77 @@
         <br>
         <button class="btn" [hidden]="!openform" (click)="onClickOpenIntentForm()" value="Concept">Create Intent Node</button>
     </div>
-    <br>
-
-    <select [(ngModel)]="selectedLevel" (change)="selected()">
-        <option>Concept Node</option>
-        <option>Intent Node</option>
-    </select>
-
-    <div *ngIf="data=='Concept Node'">
-        <form id="conceptForm" #form="ngForm" (ngSubmit)="createNode(form.value)">
-            <div class="align-fields">
-                <label>Concept Node Name: </label>
-                <input type="text" name="name" ngModel class="padding">
-                <button class="btn padding" type="button" (click)="showProprties()">Add Properties</button>
-            </div>
+    <br> -->
             <br>
-
-            <div class="align-fields">
-                <input type="text" id="newAttributeProperty" [(ngModel)]="newAttribute.property" name="newAttributeProperty" />
-                <input class="padding" type="text" id="newAttributeValue" [(ngModel)]="newAttribute.value" name="newAttributeValue" />
-                <button class="btn padding" type="button" (click)="addFieldValue()"> Add </button>
-            </div>
+            <label for="select">
+                <h5>Node Type : &nbsp;</h5>
+            </label>
+            <select [(ngModel)]="selectedLevel" (change)="selected()" class="form-control" id="select">
+                <option>Concept Node</option>
+                <option>Intent Node</option>
+            </select>
             <br>
-
-            <div *ngFor="let field of fieldArray; let i = index">
+            <div *ngIf="data=='Concept Node'">
                 <br>
-                <input type="text" name="{{field.property}}" value="{{field.property}}">
-                <input class="padding" [(ngModel)]="field.value" type="text" name="{{field.property}}" />
-                <button class="btn padding" type="button" (click)="deleteFieldValue(i)">Delete</button>
-            </div>
+                <form id="conceptForm" #form="ngForm" (ngSubmit)="createNode(form.value)">
+                    <div class="align-fields">
+                        <label>
+                            <h5>Concept Node Name:</h5>
+                        </label>
+                        <input type="text" name="name" class="padding" required>
+                        <button class="btn padding" type="button" (click)="showProperties()">Add Properties</button>
+                    </div>
+                    <br>
 
+                    <div class="align-fields" [hidden]="!openProperty">
+                        <br>
+                        <input type="text" id="newAttributeProperty" [(ngModel)]="newAttribute.property" name="newAttributeProperty" />
+                        <input class="padding" type="text" id="newAttributeValue" [(ngModel)]="newAttribute.value" name="newAttributeValue" />
+                        <button class="btn padding" type="button" (click)="addFieldValue()"> Add </button>
+                    </div>
+
+                    <div *ngFor="let field of fieldArray; let i = index">
+                        <br>
+                        <input type="text" name="{{field.property}}" value="{{field.property}}">
+                        <input class="padding" [(ngModel)]="field.value" type="text" name="{{field.property}}" />
+                        <button class="btn padding" type="button" (click)="deleteFieldValue(i)">Delete</button>
+                    </div>
+                    <br>
+                    <button class="btn" type="submit">Submit</button>
+                </form>
+            </div>
             <br>
-            <button class="btn" type="submit">Submit</button>
-        </form>
+            <div *ngIf="data=='Intent Node'">
+                <form id="intentForm" #form1="ngForm" (ngSubmit)="createIntent(form1.value)">
+                    <div class="align-fields">
+                        <label>
+                            <h5>Intent Node Name:</h5>
+                        </label>
+                        <input type="text" name="name" ngModel class="padding">
+                        <button class="btn padding" type="button" (click)="showProperties()">Add Properties</button>
+                    </div>
+                    <br>
+
+                    <div class="align-fields" [hidden]="!openProperty">
+                        <br>
+                        <input type="text" id="newAttributeProperty" [(ngModel)]="newAttribute.property" name="newAttributeProperty" />
+                        <input class="padding" type="text" id="newAttributeValue" [(ngModel)]="newAttribute.value" name="newAttributeValue" />
+                        <button class="btn padding" type="button" (click)="addFieldValue()"> Add </button>
+                    </div>
+
+                    <div *ngFor="let field of fieldArray; let i = index">
+                        <br>
+                        <input type="text" name="{{field.property}}" value="{{field.property}}">
+                        <input class="padding" [(ngModel)]="field.value" type="text" name="{{field.property}}" />
+                        <button class="btn padding" type="button" (click)="deleteFieldValue(i)">Delete</button>
+                    </div>
+
+                    <br>
+                    <button class="btn" type="submit">Submit</button>
+                </form>
+            </div>
+        </div>
     </div>
+</body>
 
-
-    <!-- [hidden]="!openIntent" -->
-    <div *ngIf="data=='Intent Node'">
-        <form id="intentForm" #form1="ngForm" (ngSubmit)="createIntent(form1.value)">
-            <div class="align-fields">
-                <label>Intent Node Name: </label>
-                <input type="text" name="name" ngModel class="padding">
-                <button class="btn padding" type="button" (click)="showProprties()">Add Properties</button>
-            </div>
-            <br>
-
-            <div class="align-fields">
-                <input type="text" id="newAttributeProperty" [(ngModel)]="newAttribute.property" name="newAttributeProperty" />
-                <input class="padding" type="text" id="newAttributeValue" [(ngModel)]="newAttribute.value" name="newAttributeValue" />
-                <button class="btn padding" type="button" (click)="addFieldValue()"> Add </button>
-            </div>
-            <br>
-
-            <div *ngFor="let field of fieldArray; let i = index">
-                <br>
-                <input type="text" name="{{field.property}}" value="{{field.property}}">
-                <input class="padding" [(ngModel)]="field.value" type="text" name="{{field.property}}" />
-                <button class="btn padding" type="button" (click)="deleteFieldValue(i)">Delete</button>
-            </div>
-
-            <br>
-            <button class="btn" type="submit">Submit</button>
-        </form>
-    </div>
-</div>
+</html>
